deployments/sherlock-frontend/resources/sherlock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherlock
  annotations:
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - status.lsst.codes
      secretName: sherlock-ingress-tls
  rules:
    - host: status.lsst.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sherlock
                port:
                  name: sherlock-http
